feat: 🦾 Implementação da rota getAllBooks
