# internal/adapter/handler/http/routes/book_routes.go
@@ -24,4 +24,5 @@ func BookRouter(app fiber.Router) {
 	app.Post("/book", bookHandler.CreateBook)
 	app.Post("/book/:id", bookHandler.UpdateBook)
 	app.Get("/book/:id", bookHandler.GetBookByID)
+	app.Get("/book", bookHandler.GetAllBooks)
 }
